syntax = "proto3";
package dipstick.spi.v1;

import "dipstick/core/v1/entity.proto";

message DeviceEntity {
  dipstick.core.v1.EntityMeta meta = 1;
  DeviceSpec spec = 2;
  DeviceStatus status = 3;
}

message DeviceSpec {
  optional uint32 bits_per_word = 1;
  optional uint32 max_speed_hz = 3;
  optional bool lsb_first = 4;
  oneof device_spec_variant {
    LinuxDeviceSpec linux = 2;
  }
}

message LinuxDeviceSpec {
  optional uint32 bus = 1;
  optional uint32 chipselect = 2;
}

message DeviceStatus {}
